--- a/Rahat/design.css
+++ b/Rahat/design.css
@@ -13,15 +13,17 @@ html{
 }
 
 /*Side Bar Section*/
+
 #sidebar .sidebar{
-    width: 250px;
-    background-color:darkblue;
-    color: white;
-    padding: 25px 25px;
+     background-color:darkblue;  
     position:fixed;
-    top: 0;
+/*    top: 0;*/
     left: 0;
-    height: auto;
+     width: 250px;
+    color: white;
+    padding: 8px 25px;
+
+    height: 1000px;
 }
 .sidebar .sidebar-head{
     width: 100%;
@@ -29,19 +31,19 @@ html{
      margin-bottom: 20px;
 }
 .sidebar .sidebar-head .sidebar-img{
-    width: 100%;
+    width: 180px;
 }
 .sidebar .sidebar-head .sidebar-img img{
     width: 100%;
     border-radius: 50%;
-    height: 200px;
+    height: 180px;
     text-align: center;
     border:2px solid white;
     
 }
 .sidebar .sidebar-head .sidebar-name{
 font-size: 1.8rem;
-    padding: 15px 5px;
+    padding: 10px 5px;
     text-align: center;
     font-weight: 700;
     text-transform: uppercase;
@@ -58,7 +60,7 @@ font-size: 1.8rem;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    padding: 20px 5px;
+    padding: 15px 5px;
 /*    border-bottom: 1px solid white;*/
 /*    background-color: aqua;*/
 
@@ -633,15 +635,21 @@ font-weight: 500;
     align-items: flex-start;
     justify-content: flex-start;
     width: 100%;
-    padding: 20px 20px;
+    padding: 20px 5px;
     color: white;
+/*    height: auto;*/
 }
 .resume .resume-skill-2 .skill-2-col-left{
-    flex-basis: 50%;
+    flex-basis: 45%;
     padding: 20px 25px;
     display: flex;
     flex-direction: column;
-    
+    background-color: #353353;
+    border: 1px solid rgba(0,0,0,0.234);
+    border-radius: 10px;
+    box-shadow: 0px 0px 0px 8px #354344;
+    margin-left: 20px;
+    margin-right: 35px;
 }
 .resume .resume-skill-2 .skill-2-col-left .header,
 .resume .resume-skill-2 .skill-2-col-right .header{
@@ -790,6 +798,10 @@ font-weight: 500;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    background-color: #353353;
+    border: 1px solid rgba(0,0,0,0.234);
+    border-radius: 10px;
+    box-shadow: 0px 0px 0px 8px #354344;
     
 }
 .resume .resume-skill-2 .skill-2-col-right .main {
@@ -812,9 +824,730 @@ padding: 0px 10px;
 }
 /*End Resume Section*/
 
+/*Portfolio Section*/
+#portfolio {
+    width: auto;
+    background-color: #353353 ;
+    color: white;
+}
+#portfolio .portfolio{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: auto;
+}
+.portfolio .portfolio-header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+.portfolio .portfolio-header h1{
+    font-size: 4.2rem;
+    padding: 20px 0px;
+    text-transform: uppercase;
+    color: white;
+}
+.portfolio .portfolio-main{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+/*    background-color: aqua;*/
+    
+}
+.portfolio .portfolio-main .list{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+/*    background-color: aqua;*/
+    padding: 20px;
+    
+}
+/*
+.portfolio .portfolio-main .list .item{
+  flex-basis: 45%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid white;
+    border-radius: 10px;
+    margin: 20px;
+    padding: 15px 20px;
+}
+*/
+.portfolio .portfolio-main .list .item{
+  flex-basis: 45%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid white;
+    border-radius: 10px;
+    margin: 20px;
+    padding: 15px 20px;
+    background-color: #353353;
+    border: 1px solid rgba(0,0,0,0.234);
+    border-radius: 10px;
+    box-shadow: 0px 0px 0px 8px #354344;
+}
+.portfolio .portfolio-main .list .item:hover{
+    transform: scale(1.1,1.1);
+    background-color:darkblue;
+    transition: .7s ease-in-out transform;
+}
+.portfolio .portfolio-main .list .item .item-main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+/*    margin: 10px 0px;*/
+/*    padding: 5px 0px;*/
+}
+
+/*
+.portfolio .portfolio-main .list .item .img-wrapper{
+position: relative;
+    height: 250px;
+    width: 100%;
+}
+.portfolio .portfolio-main .list .item .img-wrapper .img-card {
+   transform-style: preserve-3d; 
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transition: .3s ease transform;
+}
+.portfolio .portfolio-main .list .item .img-card:hover   .back-img{
+ transform: rotateY(180deg);
+}
+.portfolio .portfolio-main .list .item .img-card .front-img, 
+.portfolio .portfolio-main .list .item .img-card .back-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+     backface-visibility: hidden;
+   
+}
+.portfolio .portfolio-main .list .item .img-card .back-img{
+    transform: rotateY(180deg);
+}
+*/
+.portfolio .portfolio-main .list .item .img{
+    height: 100%;
+    width: 100%;
+    margin-bottom: 5px;
+}
+.portfolio .portfolio-main .list .item .img img{
+    height: 250px;
+    width: 100%;
+    border: 2px solid white;
+    border-radius: 5px;
+}
+.portfolio .portfolio-main .list .item .header h1{
+        font-size: 2rem;
+        text-transform:capitalize;
+        font-family: 'Galada', cursive;
+        font-weight: 300;
+}
+.portfolio .portfolio-main .list .item .item-main  .lang  {
+/*   width: 80%;*/
+}
+.portfolio .portfolio-main .list .item .item-main  .lang h1{
+   font-family: 'Bree Serif', serif;
+    padding: 10px 0px;
+    letter-spacing: .1rem;
+/*    flex-basis: 80%;*/
+}
+.portfolio .portfolio-main .list .item .item-main  .explore {
+    padding: 10px;
+    border: 1px solid blueviolet;
+    background-color: blueviolet;
+    border-radius: 5px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+}
+.portfolio .portfolio-main .list .item .item-main  .explore:hover {
+    background-color: black;
+    cursor: pointer;
+}
+/*End Portfolio Section*/
+
+/*Contact Sectioon*/
+#contact{
+    background-color: #353353;
+    width: auto;
+    color: white;
+    padding: 20px 25px;
+}
+#contact .contact{
+    display: flex;
+    flex-direction: row;
+    
+}
+.contact .col-left{
+    flex-basis: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    background-color: #353353;
+    border: 1px solid rgba(0,0,0,0.234);
+    border-radius: 10px;
+    box-shadow: 0px 0px 0px 8px #354344;
+}
+.contact .col-left .part-1{
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+    width: 100%;
+}
+.contact .col-left .part-1 .left,
+.contact .col-left .part-1 .right{
+   flex-basis: 50%;
+    margin: 5px 0px;
+    border-bottom: 1px solid white;
+}
+.contact .col-left .part-1 .left{
+    margin-right: 25px;
+}
+.contact .col-left .part-1 .left input,
+.contact .col-left .part-1 .right input,
+.contact .col-left .part-1 .left input:focus,
+.contact .col-left .part-1 .right input:focus{
+  height: 50px;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    background-color: transparent;
+    border-bottom: 0px;
+    width: 100%;
+    
+}
+.contact .col-left .part-1 .left input[type="text"],
+.contact .col-left .part-1 .right input[type="email"]{
+    color: white;
+  
+}
+
+.contact .col-left .part-2{
+    width: 97%;
+    border-bottom: 1px solid white;
+    margin: 5px auto;
+}
+.contact .col-left .part-2 input{
+     height: 60px;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    background-color: transparent;
+    border-bottom: 0px;
+    width: 100%
+}
+
+.contact .col-left .part-3{
+     width: 97%;
+    border-bottom: 1px solid white;
+    margin: 10px auto;
+}
+.contact .col-left .part-3 textarea{
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    background-color: transparent;
+    border-bottom: 0px;
+    width: 100%
+}
+.contact .col-left .part-4 {
+display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+.contact .col-left .part-4 h1 {
+   text-transform: uppercase;
+    padding: 10px 20px;
+    border-radius: 5px;
+    margin: 20px 0px;
+    width: 80%;
+    text-align: center;
+    background-color: blueviolet
+}
+.contact .col-left .part-4 h1:hover {
+    background-color:cornflowerblue;
+    cursor: pointer;
+}
+.contact .col-right{
+    display: flex;
+    flex-direction:column;
+    padding: 20px 0px;
+/*    width: 50%*/
+    flex-basis: 40%;
+    margin-left: 35px;
+    background-color: #353353;
+    border: 1px solid rgba(0,0,0,0.234);
+    border-radius: 10px;
+    box-shadow: 0px 0px 0px 8px #354344;
+    padding: 0px 20px;
+    
+}
+.contact .col-right .part-1{
+    border-bottom: 1px solid white;
+    margin: 10px 0px;
+}
+.contact .col-right .part-1 h1{
+    text-transform: uppercase;
+    padding: 5px 0px;
+ font-family: 'Archivo Narrow', sans-serif;
+    
+}
+.contact .col-right .part-2{
+    
+    margin: 10px 0px;
+}
+.contact .col-right .part-2 h1{
+    text-transform: uppercase;
+    padding: 5px 0px;
+    font-weight: 300;
+    font-family: 'Montserrat', sans-serif;
+}
+.contact .col-right .part-3{
+/*    border-bottom: 1px solid white;*/
+    margin: 10px 0px;
+}
+.contact .col-right .part-3 h1{
+    text-transform: uppercase;
+    padding: 5px 0px;
+    font-weight: 300;
+    font-family: 'Montserrat', sans-serif;
+}
+.contact .col-right .part-4{
+/*    border-bottom: 1px solid white;*/
+    margin: 10px 0px;
+}
+.contact .col-right .part-4 h1{
+    text-transform: uppercase;
+    padding: 5px 0px;
+    font-weight: 300;
+    font-family: 'Montserrat', sans-serif;
+}
+.contact .col-right .part-5{
+/*    border-bottom: 1px solid white;*/
+    margin: 10px 0px;
+}
+.contact .col-right .part-5 h1{
+    text-transform: uppercase;
+    padding: 5px 0px;
+    font-weight: 300;
+    font-family: 'Montserrat', sans-serif;
+}
+.contact .col-right .part-6{
+/*    border-bottom: 1px solid white;*/
+    margin: 10px 0px;
+}
+.contact .col-right .part-6 h1{
+    text-transform: uppercase;
+    padding: 5px 0px;
+    font-weight: 300;
+    font-family: 'Montserrat', sans-serif;
+}
+/*End Contact Section*/
 
 
 
+
+
+/*Media Query For Tablet*/
+@media only screen and (max-width: 800px){
+    .container{
+        margin-left: 0px;
+    }
+    .hamburger{
+        position: fixed;
+        top: 10px;
+        right: 10px;
+        cursor: pointer;
+        font-size: 2.5rem;
+        color: white;
+        z-index: 5;
+        text-decoration: none;
+    }
+    .hamburger .fa-times  {
+        display: none;
+    }
+    .hamburger .fa-bars  {
+        position: sticky;
+
+    }
+    #sidebar .sidebar{
+        position: absolute;
+        left: -350px;
+        top: 0;
+        opacity: 0;
+    }
+    #home .home .part-2 h1{
+        font-size: 2.1rem;
+    }
+    #home .home .part-3 h1{
+        font-size: 1.3rem;
+    }
+    #home .home .part-4 i{
+        font-size: 1.3rem;
+        margin-left: 5px;
+        margin-right: 5px;
+        cursor: pointer;
+    }
+    .home .part-5 {
+        display: flex;
+        flex-direction: column;
+    }
+    
+.home .part-5 .col-left ,
+.home .part-5 .col-right {
+       padding: 8px;
+    cursor: pointer;
+    margin: 8px 0px;
+    }
+ .home .part-5 .col-left h1,
+.home .part-5 .col-right h1{
+        font-size: 1.2rem;
+/*    padding: 5px;*/
+    }
+    #about .about {
+        border: 0px; 
+    }
+   #about .about-header h1{
+        font-size: 2.1rem;
+     
+        
+    }
+  #about .about-header h1{
+        font-size: 2.1rem;
+     
+        
+    }
+    #about .about .about-main,
+    #about .about .about-details{
+        display: flex;
+        flex-direction: column;
+        border: 0px;
+        box-shadow: 0px 0px 0px 0px black;
+        padding: 0px;
+        margin: 8px auto;
+        
+    }
+    #about .about .about-details h1{
+        font-size: 1rem;
+    }
+    #about .about-main .col-right .part-3{
+/*     flex-basis: 50%      */
+        margin: auto;
+    }
+    #about .about-main .col-right .part-3 h1{
+ font-size: 1.2rem;
+    }
+#about .about .about-details .col-left{
+       display: flex;
+    flex-wrap: nowrap;
+    }
+    
+#about .about .about-details .col-left .left{
+  margin:0px 15px;
+    }
+
+   #about .about .about-details .col-right .part-3{
+           
+    }
+     #about .about .about-details .col-right .left{
+
+        margin: 0px 15px;
+    }
+    #about .achivements{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin: auto;
+    }
+        #about .achivement-item{
+        border: 1px solid gray;
+        box-shadow: 0px 0px 0px 0px black;
+            flex-basis: 100%;
+        
+    }
+    
+    #services .services{
+        
+    }
+    
+    #services .service{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    #services .services-header h1{
+        font-size: 2.1rem;
+    }
+    
+    #services .service-item{
+    flex-basis: 100%;
+        border: 1px solid grey;
+        box-shadow: 0px 0px 0px 0px black;
+    }
+    
+    #resume .resume-header h1{
+        font-size: 2.1rem;
+    }
+    
+        
+    #resume .resume .resume-main{
+    display: flex;
+        flex-direction: row;
+    flex-wrap: wrap;
+        
+    }
+    
+    #resume .resume .resume-main .col-left{
+ flex-basis: 100%;
+    margin-bottom: 35px;
+        border: 1px solid grey;
+        box-shadow: inherit;
+    }
+
+    #resume .resume .resume-main .col-left .inst h1{
+        font-size: 1.2rem;
+        font-weight: 500;
+    }
+
+    #resume .resume .resume-main .col-left .session h1{
+        font-size: 1rem;
+        font-weight: 300;
+    }
+    #resume .resume .resume-main .col-left .course h1{
+        font-size: 1.2rem;
+    }
+    #resume .resume .resume-main .col-left .session,
+    #resume .resume .resume-main .col-left .inst,
+    #resume .resume .resume-main .col-left .course,
+    #resume .resume .resume-main .col-right .session,
+    #resume .resume .resume-main .col-right .inst,
+    #resume .resume .resume-main .col-right.course{
+       width: 100%;
+    }
+    #resume .resume .resume-main .col-right{
+     flex-basis: 100%;
+    border: 1px solid grey;
+    box-shadow: inherit;
+
+    }
+    #resume .resume .resume-main .col-right .session h1{
+        font-size: 1rem;
+        font-weight: 300;
+    }
+    #resume .resume .resume-skill-1{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    #resume .resume .resume-skill-1 .col-left{
+      flex-basis: 100%;
+        margin-bottom: 45px;
+        border: 1px solid grey;
+        box-shadow: inherit;
+    }
+    
+   #resume .resume .resume-skill-1 .col-right{
+      flex-basis: 100%;
+       margin-bottom: 45px;
+        border: 1px solid grey;
+        box-shadow: inherit;
+    }
+    #resume .resume .resume-skill-1 .col-left .left-skill-list .item .main,
+    #resume .resume .resume-skill-1 .col-right .right-skill-list .item .main{
+        width: 100%;
+    }
+   #resume .resume .resume-skill-1 .col-left .left-skill-list .item .title h1,
+    #resume .resume .resume-skill-1 .col-right .right-skill-list .item .title h1{
+     font-size: 1rem;
+    }
+   #resume .resume .resume-skill-1 .col-left .left-skill-list .item .title h1{
+     
+    }
+    
+    #resume .resume .resume-skill-2{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;  
+        width: 100%;
+    }
+    
+    #resume .resume .resume-skill-2 .skill-2-col-left{
+      flex-basis: 100%;
+        border: 1px solid grey;
+        box-shadow: inherit;
+        margin: 45px auto;
+    }
+    #resume .resume .resume-skill-2 .skill-2-col-left .main{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    #resume .resume .resume-skill-2 .skill-2-col-left .main .radial-process{
+/* flex-basis: 20%;*/
+        margin: auto;
+    }
+    #resume .resume .resume-skill-2 .skill-2-col-left .main .radial-process:nth-child(2) .title{
+  font-size: .9rem;
+        text-align: justify;
+    }
+    
+   #resume .resume .resume-skill-2 .skill-2-col-right{
+      flex-basis: 90%;
+       margin-bottom: 45px;
+       box-shadow: inherit;
+       border: 1px solid grey;
+       margin: auto;
+       padding: 5px 3px;
+/*       width: 85%;*/
+           
+    }
+    
+    #resume .resume .resume-skill-2 .skill-2-col-right p{
+       font-size: .9rem; 
+        text-align: justify;
+    }
+    #portfolio .portfolio {
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+        width: auto;
+
+    }
+    #portfolio .portfolio-header h1{
+      font-size: 2.1rem;
+
+    }
+        #portfolio .portfolio-main {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap; 
+        width: 100%;
+            margin: auto;
+    }
+    #portfolio .portfolio .list{
+      flex-basis: 100%;
+    }
+    
+   #portfolio .portfolio .list .item{
+      flex-basis: 80%;
+       margin: 45px auto;
+        box-shadow: inherit;
+       border: 1px solid grey;
+       
+    }
+    #portfolio .portfolio .list .item .header h1{
+        font-size: 1.4rem
+    }
+    #portfolio .portfolio .list .item .lang h1{
+        font-size: 1rem
+    }
+     #portfolio .portfolio .list .item:hover{
+         transform: scale(1,1);
+         background-color:black;
+    }
+    #portfolio .portfolio .list .item .explore{
+   
+     margin: 8px 0px;
+
+    }
+    
+  #contact .contact {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap; 
+
+    }
+    
+    #contact .contact .col-left{
+      flex-basis: 90%;
+/*        margin-bottom: 45px;*/
+        margin: 45px auto;
+        box-shadow: inherit;
+       border: 1px solid grey;
+    }
+    
+    #contact .contact .col-right{
+      flex-basis: 80%;
+        margin: 5px auto;
+        box-shadow: inherit;
+       border: 1px solid grey;
+    }
+}
+/*End Media Query For Tablet*/
+
+
+/*Media query For smaller devices */
+@media only screen and (max-width: 400px){
+    #services .service-item h1{
+  font-size: 1rem;
+        font-weight: bolder;
+    }
+    
+    
+    #portfolio .portfolio .list {
+        margin:  0px;
+        width: 90%;
+    }
+    #portfolio .portfolio .list .item{
+        margin: inheritauto;
+    }
+ #portfolio .portfolio .list .item:nth-child(1) .lang h1,
+#portfolio .portfolio .list .item:nth-child(6) .lang h1{
+        font-size: .6rem;
+        text-align: justify;
+     line-height: 30px;
+    }
+    #portfolio .portfolio .list .item .explore{
+   
+     margin: 8px 0px;
+
+    }
+ #portfolio .portfolio .list .item .explore h1{
+        font-size: 1rem;
+   
+
+    }
+    
+    #contact .contact {
+      width: 95%;
+        margin: 5px auto;
+        box-shadow: inherit;
+/*       border: 1px solid grey;*/
+    }
+    #contact .contact .col-right {
+      width: 100%;
+        margin: 25px auto;
+        box-shadow: inherit;
+       border: 1px solid grey;
+    }
+    #contact .contact .col-right h1 {
+  font-size: 1rem;
+    }
+    #contact .contact .col-left .part-4 h1{
+ font-size: 1rem;
+    }
+    
+}
+/*End Media query For smaller devices */
 @keyframes fadeinup{
     0% {
     -webkit-transform: translate3d(0,100%,0);
