--- a/Rahat/design.css
+++ b/Rahat/design.css
@@ -577,15 +577,34 @@ font-weight: 500;
     border-radius: 10px;
     box-shadow: 0px 0px 0px 8px #354344;
     padding: 10px 20px;
+    cursor: pointer;
 }
 .resume .resume-skill-1 .col-left .left-skill-header,
 .resume .resume-skill-1 .col-right .right-skill-header{
     padding: 10px 0px;
     border-bottom: 1px solid white;
 }
-.resume .resume-skill-1 .col-left .left-skill-list,
+.resume .resume-skill-1 .col-left .left-skill-header i,
+.resume .resume-skill-1 .col-right .right-skill-header i{
+    margin-left: 8px;
+    font-size: 1.8rem;
+    background-color: blueviolet;
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    text-align: center;
+}
+.resume .resume-skill-1 .col-left .left-skill-list{
+    padding: 10px 0px;
+    max-height: 0px;
+    overflow: hidden;
+    transition: .7s ease-in-out max-height;
+}
 .resume .resume-skill-1 .col-right .right-skill-list{
     padding: 10px 0px;
+    max-height: 0px;
+    overflow: hidden;
+    transition: .7s ease-in-out max-height;
 }
 .resume .resume-skill-1 .col-left .left-skill-list .item,
 .resume .resume-skill-1 .col-right .right-skill-list .item{
@@ -662,6 +681,7 @@ font-weight: 500;
     box-shadow: 0px 0px 0px 8px #354344;
     padding: 10px 20px;
     margin: 10px 20px;
+    cursor: pointer;
 }
 
 
@@ -1596,4 +1616,27 @@ display: flex;
     opacity: 1;
     transform: translateZ(0);
 }
+}
+
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+/*  border: none;*/
+  outline: none;
+  background-color:blueviolet;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 50%;
+    height: 80px;
+    width: 80px;
+}
+
+#myBtn:hover {
+  background-color: #555;
 }
